bug/RCT-211-PoorNettyPerformance4 save point - tests broken